modify info message remove the class 'danger' from all files

--- a/Views/ApplicationUsers/Index.cshtml
+++ b/Views/ApplicationUsers/Index.cshtml
@@ -101,7 +101,7 @@
 }
 else
 {
-    <div class="alert alert-danger">
+    <div class="alert">
     <h4 style="font-weight:bolder">
         <span class="glyphicon glyphicon-remove">
         </span> No rows to display!
