--- a/Views/Items/Create.cshtml
+++ b/Views/Items/Create.cshtml
@@ -15,7 +15,7 @@
      
         <div class="alert alert-danger" id="error-div" style="display:none">
             <span id="view-err">
-
+                // PLEASE ADD A MESSAGE HERE
             </span>
         </div>
         <hr />
