--- a/Views/Quantities/GetQuantityByItem.cshtml
+++ b/Views/Quantities/GetQuantityByItem.cshtml
@@ -50,10 +50,10 @@
                         }
     </table>
 
-                        }
-                        else
-                        {
-                            <div style="width:50%" class="alert alert-danger">
-                                <h4 style="font-weight:bolder">No rows to view!</h4>
-                            </div>
-                        }
+}
+else
+{
+    <div style="width:50%" class="alert">
+        <h4 style="font-weight:bolder">No rows to view!</h4>
+    </div>
+}
