--- a/Views/Quantities/Index.cshtml
+++ b/Views/Quantities/Index.cshtml
@@ -102,16 +102,16 @@
             </tr>
                         }
     </table>
-                        }
-                        else
-                        {
-                            <div class="alert alert-danger">
-                                <h4 style="font-weight:bolder">
-                                    <span class="glyphicon glyphicon-remove">
-                                    </span> No rows to display!
-                                </h4>
-                            </div>
-                        }
+}
+else
+{
+    <div class="alert">
+        <h4 style="font-weight:bolder">
+            <span class="glyphicon glyphicon-remove">
+            </span> No rows to display!
+        </h4>
+    </div>
+}
 
 @switch ((string)ViewBag.Result)
 {
