--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -97,7 +97,7 @@
                     <div class="col-md-8 ml-auto mr-auto">
                         <div class="brand @ViewBag.display">
                             <h2 class="title">Eyewear Store System</h2>
-                            <h3 class="desc">Saudi Arabis's biggest online eyewear store, under your service!</h3>
+                            <h3 class="desc">Saudi Arabia's biggest online eyewear store, under your service!</h3>
                         </div>
                     </div>
                 </div>
