--- a/Views/Insurances/Index.cshtml
+++ b/Views/Insurances/Index.cshtml
@@ -54,7 +54,7 @@
 }
 else
 {
-    <div class="alert alert-danger">
+    <div class="alert">
         <h4 style="font-weight:bolder">
             <span class="glyphicon glyphicon-remove">
             </span> No rows to display!
