--- a/Views/Items/Edit.cshtml
+++ b/Views/Items/Edit.cshtml
@@ -14,7 +14,7 @@
     <div class="form-horizontal">
         <div class="alert alert-danger" id="error-div" style="display:none">
             <span id="view-err">
-
+                // PLEASE ADD A MESSAGE HERE
             </span>
         </div>
         <hr />
