modify h2 the header of all pages with alert-primary

--- a/Views/Account/AddUser.cshtml
+++ b/Views/Account/AddUser.cshtml
@@ -4,7 +4,10 @@
     ViewBag.Title = "AddUser";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-    <h2>Add User</h2>
+    
+    <div class="alert alert-primary">
+        <h2>Add User</h2>
+    </div>
 
     @using (Html.BeginForm())
     {
