--- a/Views/Account/ExternalLoginFailure.cshtml
+++ b/Views/Account/ExternalLoginFailure.cshtml
@@ -3,6 +3,10 @@
 }
 
 <hgroup>
-    <h2>@ViewBag.Title.</h2>
+    
+    <div class="alert alert-primary">
+        <h2>@ViewBag.Title.</h2>
+    </div>
+    
     <h3 class="text-danger">Unsuccessful login with service.</h3>
 </hgroup>
