--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Forgot your password?";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="alert alert-primary">
+    <h2>@ViewBag.Title.</h2>
+</div>
 
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
