--- a/Views/Account/ManagerTasksView.cshtml
+++ b/Views/Account/ManagerTasksView.cshtml
@@ -2,8 +2,11 @@
     ViewBag.Title = "ManagerTasksView";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-<h2>Manager Tasks List</h2>
-<hr />
+
+<div class="alert alert-primary">
+    <h2>Manager Tasks List</h2>
+</div>
+
 <div class="list-group">
     <div class="row">
         <div class="col-md-offset-2 col-md-4">
