--- a/Views/Account/ResetPassword.cshtml
+++ b/Views/Account/ResetPassword.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Reset password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="alert alert-primary">
+    <h2>@ViewBag.Title.</h2>
+</div>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
