--- a/Views/Cart/Edit.cshtml
+++ b/Views/Cart/Edit.cshtml
@@ -5,7 +5,9 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Edit Order</h2>
+<div class="alert alert-primary">
+    <h2>Edit Order</h2>
+</div>
 
 @using (Html.BeginForm())
 {
