--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -5,8 +5,11 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Categories</h2>
-<hr />
+
+<div class="alert alert-primary">
+    <h2>Categories</h2>
+</div>
+
 <div class="row">
     <div class="col-md-offset-5 col-md-2">
         <div class="form-group">
