--- a/Views/Insurances/Create.cshtml
+++ b/Views/Insurances/Create.cshtml
@@ -5,7 +5,10 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Create Insurance</h2>
+
+<div class="alert alert-primary">
+    <h2>Create Insurance</h2>
+</div>
 
 @using (Html.BeginForm()) 
 {
