--- a/Views/Orders/GetOrdersByUser.cshtml
+++ b/Views/Orders/GetOrdersByUser.cshtml
@@ -5,8 +5,10 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>My Orders</h2>
-<hr />
+
+<div class="alert alert-primary">
+    <h2>My Orders</h2>
+</div>
 
 <table class="table table-hover">
     <tr>
