--- a/Views/Test/Index.cshtml
+++ b/Views/Test/Index.cshtml
@@ -4,5 +4,7 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Index</h2>
 
+<div class="alert alert-primary">
+    <h2>Index</h2>
+</div>
