--- a/Views/Account/ConfirmEmail.cshtml
+++ b/Views/Account/ConfirmEmail.cshtml
@@ -2,7 +2,11 @@
     ViewBag.Title = "Confirm Email";
 }
 
-<h2>@ViewBag.Title.</h2>
+
+<div class="alert alert-primary">
+    <h2>@ViewBag.Title.</h2>  
+</div>
+
 <div>
     <p>
         Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
