--- a/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Views/Account/ExternalLoginConfirmation.cshtml
@@ -2,7 +2,11 @@
 @{
     ViewBag.Title = "Register";
 }
-<h2>@ViewBag.Title.</h2>
+
+<div class="alert alert-primary">
+    <h2>@ViewBag.Title.</h2>
+</div>
+
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
