--- a/Views/Account/SendCode.cshtml
+++ b/Views/Account/SendCode.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Send";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="alert alert-primary">
+    <h2>@ViewBag.Title.</h2>
+</div>
 
 @using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
