--- a/Views/Account/VerifyCode.cshtml
+++ b/Views/Account/VerifyCode.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Verify";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="alert alert-primary">
+    <h2>@ViewBag.Title.</h2>
+</div>
 
 @using (Html.BeginForm("VerifyCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
