--- a/Views/ApplicationUsers/Edit.cshtml
+++ b/Views/ApplicationUsers/Edit.cshtml
@@ -6,7 +6,9 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Edit User</h2>
+<div class="alert alert-primary">
+    <h2>Edit User</h2>
+</div>
 
 @using (Html.BeginForm())
 {
