--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -5,7 +5,10 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Edit Category</h2>
+
+<div class="alert alert-primary">
+    <h2>Edit Category</h2>
+</div>
 
 @using (Html.BeginForm())
 {
