--- a/Views/Home/Buy.cshtml
+++ b/Views/Home/Buy.cshtml
@@ -5,8 +5,11 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Buy Item</h2>
-<hr />
+
+<div class="alert alert-primary">
+    <h2>Buy Item</h2>
+</div>
+
     @if (ViewBag.Result == null)
     {
         using (Html.BeginForm())
