--- a/Views/Items/Edit.cshtml
+++ b/Views/Items/Edit.cshtml
@@ -5,7 +5,10 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Edit Item</h2>
+
+<div class="alert alert-primary">
+    <h2>Edit Item</h2>
+</div>
 
 @using (Html.BeginForm("Edit", "Items", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
