--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -5,8 +5,11 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Items</h2>
-<hr />
+
+<div class="alert alert-primary">
+    <h2>Items</h2>
+</div>
+
 @using (Html.BeginForm("Search", "Items", FormMethod.Post))
 {
     <div class="row">
