--- a/Views/Orders/Edit.cshtml
+++ b/Views/Orders/Edit.cshtml
@@ -4,7 +4,10 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>Edit Order</h2>
+
+<div class="alert alert-primary">
+    <h2>Edit Order</h2>
+</div>
 
 @using (Html.BeginForm())
 {
