--- a/Content/sass/Styles.sass
+++ b/Content/sass/Styles.sass
@@ -72,7 +72,9 @@ section
     width: 100% !important
 #main-body
     min-height: 600px
-    padding: 10px 0px    
+    padding: 0px 0px   
+    overflow: hidden
+    border-radius: 7px  
 #carousel
     .carousel-inner
         .carousel-item
