--- a/Views/Branches/Edit.cshtml
+++ b/Views/Branches/Edit.cshtml
@@ -13,8 +13,8 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <hr />
+<div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
+    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
