--- a/Views/Items/Create.cshtml
+++ b/Views/Items/Create.cshtml
@@ -14,7 +14,8 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+<div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
+    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
      
         <div class="alert alert-danger" id="error-div" style="display:none">
             <span id="view-err">
