--- a/Views/Quantities/Edit.cshtml
+++ b/Views/Quantities/Edit.cshtml
@@ -14,7 +14,8 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+<div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
+    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
         <h4></h4>
         @{
             if (ViewBag.Result != null)
