--- a/Views/Items/Create.cshtml
+++ b/Views/Items/Create.cshtml
@@ -15,13 +15,15 @@
     @Html.AntiForgeryToken()
     
 <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
-    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-     
+    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">//dear Muhannad I think this div is not closed and I don't know where I should close it
+
         <div class="alert alert-danger" id="error-div" style="display:none">
             <span id="view-err">
                 // PLEASE ADD A MESSAGE HERE
+                //This message will be added by java script code bellow
             </span>
         </div>
+    
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -123,6 +125,7 @@
             </div>
         </div>
     </div>
+    
 }
 
 @section scripts{
