--- a/Views/Quantities/Index.cshtml
+++ b/Views/Quantities/Index.cshtml
@@ -40,7 +40,7 @@
         @if (User.IsInRole("Admins"))
         {
             <div class="col-md-2">
-                <a class="btn btn-default btn-block" href="Quantities/Create">
+                <a class="btn btn-default btn-block" href="~/Quantities/Create">
                     <span class="glyphicon glyphicon-plus-sign"></span> Add New Quantity
                 </a>
             </div>
