--- a/Views/Insurances/Index.cshtml
+++ b/Views/Insurances/Index.cshtml
@@ -11,7 +11,7 @@
 @if (User.IsInRole("Admins")) {
     <div class="row">
         <div class="col-md-offset-5 col-md-2">
-            <div class="form-group">
+            <div class="row">
                 <a class="btn btn-default btn-block" href="Insurances/Create">
                     <span class="glyphicon glyphicon-plus-sign"></span> Create New Insurance
                 </a>
