--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -14,7 +14,7 @@
 {
     <div class="row">
         <div class="col-md-offset-1 col-md-5">
-            <div class="form-group">
+            <div class="row">
                 <input type="text" name="searchName" class="form-control" placeholder="Search for item by model number, brand, color, type or gender ...">
             </div>
         </div>
