--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -14,15 +14,15 @@
 {
     <div class="row">
         <div class="col-md-2">
-            <div class="form-group">
+            <div class="row">
                 <input type="search" name="OrderId" placeholder="Order Number" class="form-control" />
             </div>
         </div>
         <div class="col-md-3">
-            <div class="form-group">
+            <div class="row">
                 <input type="search" name="UserName" placeholder="User Name" class="form-control">
             </div>
-            <div class="form-group">
+            <div class="row">
                 <input type="search" name="ModelNumber" placeholder="Model Number" class="form-control">
             </div>
         </div><div class="col-md-3">
@@ -35,10 +35,10 @@
             </div>
         </div>
         <div class="col-md-2">
-            <div class="form-group">
+            <div class="row">
                 @Html.DropDownList("AllStatus", null, htmlAttributes: new { @class = "form-control" })
             </div>
-            <div class="form-group">
+            <div class="row">
                 @if (User.IsInRole("Admins"))
                 {
                     @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="col-md-2">
-            <div class="form-group">
+            <div class="row">
                 <input type="submit" value="Search" class="btn btn-default btn-block" />
             </div>
         </div>
