--- a/Views/Test/Index2.cshtml
+++ b/Views/Test/Index2.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<div class="form-group">
+<div class="row">
     <div>
         <br>
         <div class="row">
