--- a/Views/Account/AddUser.cshtml
+++ b/Views/Account/AddUser.cshtml
@@ -16,75 +16,79 @@
         <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">
             <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
+                <div class="row">
+                    <div class="col-sm-12">
                         @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.UserType, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    <div class="col-sm-12">
                         @Html.DropDownList("UserType", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.UserType, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.BranchId, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
+            </div>
+
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    <div class="col-sm-12">
                         @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    <div class="col-sm-12">
                         @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    <div class="col-sm-12">
                         @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    <div class="col-sm-12">
                         @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    <div class="col-sm-12">
                         @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
+            </div>
+
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
                     <div class="col-md-2">
                         <a href=@Url.Action("Index","ApplicationUsers") class="btn btn-default btn-block">
                             <span class="glyphicon glyphicon-arrow-left"></span> Back to Users List
                         </a>
                     </div>
-                    <div class="col-md-offset-3 col-md-2">
-                        <button type="submit" value="Create" class="btn btn-default btn-block">
-                            <span class="glyphicon glyphicon-plus-sign"></span> Create
-                        </button>
-                    </div>
-                </div>
+            </div>
+            
+            <div class="row d-flex justify-content-between">
+                <input type="submit" value="Create" class="btn btn-primary col-9 mx-auto" />
             </div>
         </div>
     }
-<div class="row">
- 
-</div>
