--- a/Views/Account/EditProfile.cshtml
+++ b/Views/Account/EditProfile.cshtml
@@ -18,64 +18,70 @@
 
         <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">
             <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-                <h3>@ViewBag.Result</h3>
-                <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.id)
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.CurrentPassword, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.CurrentPassword, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CurrentPassword, "", new { @class = "text-danger" })
+                <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            @Html.EditorFor(model => model.CurrentPassword, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CurrentPassword, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.NewPassword, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.NewPassword, "", new { @class = "text-danger" })
+                <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NewPassword, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+                <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-5 col-md-2">
-                        <button type="submit" value="Save" class="btn btn-default btn-block">
-                            <span class="glyphicon glyphicon-floppy-disk"></span> Save
-                        </button>
+                <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                    <div class="row">
+                        <div class="col-md-offset-5 col-md-2">
+                            <button type="submit" value="Save" class="btn btn-default btn-block">
+                                <span class="glyphicon glyphicon-floppy-disk"></span> Save
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -87,11 +93,17 @@ else
 {
     <h3>@ViewBag.Result</h3>
 }
-<div class="row">
-    <div class="col-md-2">
-        <a href="/Home" class="btn btn-default btn-block">
-            <span class="glyphicon glyphicon-arrow-left"></span> Back to Home Page
-        </a>
+<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+    <div class="row">
+        <div class="col-md-2">
+            <a href="/Home" class="btn btn-primary col-9 mx-auto">
+                <span class="glyphicon glyphicon-arrow-left"></span> Back to Home Page
+            </a>
+        </div>
     </div>
+</div>
+
+<div class="row d-flex justify-content-between">
+    <input type="submit" value="Send" class="" />
 </div>
 
