--- a/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Views/Account/ExternalLoginConfirmation.cshtml
@@ -21,15 +21,15 @@
         Please enter a user name for this site below and click the Register button to finish
         logging in.
     </p>
-    <div class="form-group">
+    <div class="row">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        <div class="col-sm-12">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+    <div class="row">
+        <div class="col-sm-12">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
