--- a/Views/Account/ManagerTasksView.cshtml
+++ b/Views/Account/ManagerTasksView.cshtml
@@ -12,7 +12,7 @@
         <div class="col-md-offset-2 col-md-4">
             @Html.ActionLink("Go To Users", "Index", "ApplicationUsers", null, new { @class = "list-group-item" })
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-12">
             @Html.ActionLink("Go To Items", "Index", "Items", null, new { @class = "list-group-item" })
         </div>
     </div>
@@ -20,7 +20,7 @@
         <div class="col-md-offset-2 col-md-4">
             @Html.ActionLink("Go To Invoices", "Index", "Invoices", null, new { @class = "list-group-item" })
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-12">
             @Html.ActionLink("Go To Orders", "Index", "Orders", null, new { @class = "list-group-item" })
         </div>
     </div>
@@ -28,7 +28,7 @@
         <div class="col-md-offset-2 col-md-4">
             @Html.ActionLink("Go To Branches", "Index", "Branches", null, new { @class = "list-group-item" })
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-12">
             @Html.ActionLink("Go To Categories", "Index", "Categories", null, new { @class = "list-group-item" })
         </div>
     </div>
@@ -36,7 +36,7 @@
         <div class="col-md-offset-2 col-md-4">
             @Html.ActionLink("Go To Insurances", "Index", "Insurances", null, new { @class = "list-group-item" })
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-12">
             @Html.ActionLink("Go To Quantities", "Index", "Quantities", null, new { @class = "list-group-item" })
         </div>
     </div>
