--- a/Views/Account/VerifyCode.cshtml
+++ b/Views/Account/VerifyCode.cshtml
@@ -14,22 +14,22 @@
     <h4>Enter verification code</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
+    <div class="row">
         @Html.LabelFor(m => m.Code, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        <div class="col-sm-12">
             @Html.TextBoxFor(m => m.Code, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+    <div class="row">
+        <div class="col-sm-12">
             <div class="checkbox">
                 @Html.CheckBoxFor(m => m.RememberBrowser)
                 @Html.LabelFor(m => m.RememberBrowser)
             </div>
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+    <div class="row">
+        <div class="col-sm-12">
             <input type="submit" class="btn btn-default" value="Submit" />
         </div>
     </div>
