--- a/Views/ApplicationUsers/Edit.cshtml
+++ b/Views/ApplicationUsers/Edit.cshtml
@@ -14,61 +14,67 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">
-    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+    <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    <div class="col-sm-12">
+                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    <div class="col-sm-12">
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.Label("", "Branch", new { @class = "control-label col-md-2 col-md-offset-2" } )
-            <div class="col-md-4">
-                @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    <div class="col-sm-12">
+                        @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            @Html.Label("User Type", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.DropDownList("UserType", null, htmlAttributes: new { @class = "form-control" })
+
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    @Html.Label("", "Branch", new { @class = "control-label col-md-2 col-md-offset-2" } )
+                    <div class="col-sm-12">
+                        @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-2">
-                <a href="ApplicationUsers" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-arrow-left"></span> Back to Users List
-                </a>
+            
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="row">
+                    @Html.Label("User Type", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
+                    <div class="col-sm-12">
+                        @Html.DropDownList("UserType", null, htmlAttributes: new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-            <div class="col-md-offset-3 col-md-2">
-                <button type="submit" value="Save" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-floppy-disk"></span> Save
-                </button>
+            
+            <div class="row d-flex justify-content-between">
+                <input type="submit" value="Save" class="btn btn-primary col-9 mx-auto" />
             </div>
         </div>
     </div>
 }
-<div class="row">
-   
-</div>
+                <div class="row">
+                    <div class="col-md-2">
+                        <a href="ApplicationUsers" class="btn btn-default btn-block">
+                            <span class="glyphicon glyphicon-arrow-left"></span> Back to Users List
+                        </a>
+                    </div>
+                </div>
