--- a/Views/ApplicationUsers/Index.cshtml
+++ b/Views/ApplicationUsers/Index.cshtml
@@ -13,7 +13,7 @@
 {
     <div class="row">
         <div class="col-md-5 col-md-offset-1">
-            <div class="form-group">
+            <div class="row">
                 <input type="text" name="searchName" class="form-control" placeholder="Search for user by user name, Email, phone number, branch name or user type ...">
             </div>
         </div>
