--- a/Views/Branches/Index.cshtml
+++ b/Views/Branches/Index.cshtml
@@ -13,24 +13,24 @@
 {
     <div class="row">
         <div class="col-md-offset-1 col-md-3">
-            <div class="form-group">
+            <div class="row">
                 <input type="search" name="BranchName" class="form-control" placeholder="Branch Name">
             </div>
         </div>
         <div class="col-md-3">
-            <div class="form-group">
+            <div class="row">
                 <input type="search" name="Address" class="form-control" placeholder="Address">
             </div>
         </div>
         <div class="col-md-2">
-            <div class="form-group">
+            <div class="row">
                 <button type="submit" value="Search" class="btn btn-default btn-block" ><span class="glyphicon glyphicon-search"></span> Search</button>
             </div>
         </div>
         @if (User.IsInRole("Admins"))
         {
             <div class="col-md-2">
-                <div class="form-group">
+                <div class="row">
                     <a class="btn btn-default btn-block" href="Branches/Create">
                         <span class="glyphicon glyphicon-plus-sign"></span> Create New Branch
                     </a>
