--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -15,29 +15,30 @@
     @Html.AntiForgeryToken()
     
 <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
-    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CategoryName, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
+    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+        <div class="row">
+            <div class="col-sm-12">
                 @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
             </div>
         </div>
+    </div>
 
-        <div class="form-group">
-            <div class="col-md-2">
-                <a href="Categories" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-arrow-left"></span> Back to Categories List
-                </a>
-            </div>
-            <div class="col-md-offset-3 col-md-2">
-                <button type="submit" value="Save" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-floppy-disk"></span> Save
-                </button>
-            </div>
+    <div class="row d-flex justify-content-between">
+        <input type="submit" value="Save" class="btn btn-primary col-9 mx-auto" />
+    </div>
+</div>
+}
+
+<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+    <div class="row">
+        <div class="col-md-2">
+            <a href="Categories" class="btn btn-default btn-block">
+                <span class="glyphicon glyphicon-arrow-left"></span> Back to Categories List
+            </a>
         </div>
     </div>
-}
+</div>
