--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -12,7 +12,7 @@
 
 <div class="row">
     <div class="col-md-offset-5 col-md-2">
-        <div class="form-group">
+        <div class="row">
             <a class="btn btn-default btn-block" href="Categories/Create">
                 <span class="glyphicon glyphicon-plus-sign"></span> Create New Category
             </a>
