--- a/Views/Insurances/Create.cshtml
+++ b/Views/Insurances/Create.cshtml
@@ -14,36 +14,41 @@
 {
     @Html.AntiForgeryToken()
     
-<div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
-    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">//dear Muhannad I think this div is not closed and I don't know where I should close it
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+    <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Discount, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Discount, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Discount, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.Discount, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Discount, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-2">
-                <a href=@Url.Action("Index") class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-arrow-left"></span> Back to Insurances List
-                </a>
-            </div>
-            <div class="col-md-offset-3 col-md-2">
-                <button type="submit" value="Create" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-plus-sign"></span> Create
-                </button>
-            </div>
+        <div class="row d-flex justify-content-between">
+            <input type="submit" value="Create" class="btn btn-primary col-9 mx-auto" />
         </div>
     </div>
 }
+
+<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-md-2">
+                    <a href=@Url.Action("Index") class="btn btn-default btn-block">
+                        <span class="glyphicon glyphicon-arrow-left"></span> Back to Insurances List
+                    </a>
+                </div>
+                <div class="col-md-offset-3 col-md-2">
+                    <button type="submit" value="Create" class="btn btn-default btn-block">
+                        <span class="glyphicon glyphicon-plus-sign"></span> Create
+                    </button>
+                </div>
+            </div>
+        </div>
