--- a/Views/Invoices/Create.cshtml
+++ b/Views/Invoices/Create.cshtml
@@ -68,7 +68,7 @@
                         <div class="col-md-9"><input type="number" v-model="newItem.quantity" @@keyup.enter="addProd()" id="quantity" placeholder="quantity" class="form-control" min="1"></div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="row">
                         <button class="btn btn-success" @@click="addProd()" :disabled="!newItem.model || !newItem.price || !newItem.quantity">
                             <i class="fas fa-plus-circle"></i> add product
                         </button>
