--- a/Views/Items/Create.cshtml
+++ b/Views/Items/Create.cshtml
@@ -14,119 +14,137 @@
 {
     @Html.AntiForgeryToken()
     
-<div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
-    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">//dear Muhannad I think this div is not closed and I don't know where I should close it
-
-        <div class="alert alert-danger" id="error-div" style="display:none">
-            <span id="view-err">
-                // PLEASE ADD A MESSAGE HERE
-                //This message will be added by java script code bellow
-            </span>
-        </div>
-    
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.BrandName, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.BrandName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BrandName, "", new { @class = "text-danger" })
+    <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="alert alert-danger" id="error-div" style="display:none">
+                <span id="view-err">
+                    // PLEASE ADD A MESSAGE HERE
+                    //This message will be added by java script code bellow
+                </span>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CategoryId, null, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.DropDownList("CategoryId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+        
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1"> 
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.BrandName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BrandName, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ModelNumber, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.ModelNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ModelNumber, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.DropDownList("CategoryId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ItemImage, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                <input type="file" name="upload" id="myImage" />
-                @Html.ValidationMessageFor(model => model.ItemImage, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.ModelNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ModelNumber, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Color, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Color, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Color, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    <input type="file" name="upload" id="myImage" />
+                    @Html.ValidationMessageFor(model => model.ItemImage, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.FrameMaterial, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.FrameMaterial, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FrameMaterial, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.Color, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Color, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.FrameDesign, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.FrameDesign, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FrameDesign, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.FrameMaterial, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FrameMaterial, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.LensMaterial, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.LensMaterial, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LensMaterial, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.FrameDesign, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FrameDesign, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.LensDesign, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.LensDesign, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LensDesign, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.LensMaterial, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.LensMaterial, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.LensDesign, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.LensDesign, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-md-2">
-                <a href="Items" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-arrow-left"></span> Back to Items List
-                </a>
+
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-offset-3 col-md-2">
-                <button type="submit" value="Create" id="create" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-plus-sign"></span> Create
-                </button>
-            </div>
+        </div>
+        
+        <div class="row d-flex justify-content-between">
+            <input type="submit" value="Create" class="btn btn-primary col-9 mx-auto" />
         </div>
     </div>
     
 }
+<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-md-2">
+                    <a href="Items" class="btn btn-default btn-block">
+                        <span class="glyphicon glyphicon-arrow-left"></span> Back to Items List
+                    </a>
+                </div>
+                <div class="col-md-offset-3 col-md-2">
+                    <button type="submit" value="Create" id="create" class="btn btn-default btn-block">
+                        <span class="glyphicon glyphicon-plus-sign"></span> Create
+                    </button>
+                </div>
+            </div>
+        </div>
+
 
 @section scripts{
     <script>
