--- a/Views/Orders/Edit.cshtml
+++ b/Views/Orders/Edit.cshtml
@@ -13,53 +13,60 @@
 {
     @Html.AntiForgeryToken()
     
-<div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">
-    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-        <div class="form-group">
-            @Html.LabelFor(model => model.Id, "Order No", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" , disabled="disabled"} })
-                @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.User.UserName, "User Name", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(Model => Model.User.UserName, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
+    <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" , disabled="disabled"} })
+                    @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(Model => Model.User.UserName, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                    @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                
-                @Html.DropDownList("Status", new SelectList(Eyewear_Store_System.Models.Order.AllStatus), new {@class= "form-control" })
-                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                    @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.DropDownList("Status", new SelectList(Eyewear_Store_System.Models.Order.AllStatus), new {@class= "form-control" })
+                    @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>        
 
-        <div class="form-group">
-            <div class="col-md-2">
-                <a href="Orders" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-arrow-left"></span> Back to Orders List
-                </a>
-            </div> 
+        <div class="row d-flex justify-content-between">
+            <input type="submit" value="Save" class="btn btn-primary col-9 mx-auto" />
+        </div>
+    </div>
+}
+
+<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-md-2">
+                    <a href="Orders" class="btn btn-default btn-block">
+                        <span class="glyphicon glyphicon-arrow-left"></span> Back to Orders List
+                    </a>
+                </div> 
+            </div>
             <div class="col-md-offset-3 col-md-2">
                 <input type="submit" value="Save" class="btn btn-default btn-block" />
             </div>
         </div>
-    </div>
-}
