--- a/Views/Quantities/Edit.cshtml
+++ b/Views/Quantities/Edit.cshtml
@@ -14,53 +14,68 @@
 {
     @Html.AntiForgeryToken()
     
-<div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
-    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-        <h4></h4>
-        @{
-            if (ViewBag.Result != null)
-            {
-                <h3>@ViewBag.Result</h3>
-            }
-        }
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.Label("Item Model Number", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @{
-                    ApplicationDbContext db = new ApplicationDbContext();
-                    var ModelNumber = db.Items.Find(Model.ItemId).ModelNumber;
-                    
-                    <input type="text" name="ItemModelNumber" value="@ModelNumber" class = "form-control"/>
+    <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <h4></h4>
+            @{
+                if (ViewBag.Result != null)
+                {
+                    <h3>@ViewBag.Result</h3>
                 }
-                
-                
-                @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
+            }
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                @Html.Label("Item Model Number", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
+                <div class="col-sm-12">
+                    @{
+                        ApplicationDbContext db = new ApplicationDbContext();
+                        var ModelNumber = db.Items.Find(Model.ItemId).ModelNumber;
+                        
+                        <input type="text" name="ItemModelNumber" value="@ModelNumber" class = "form-control"/>
+                    }
+                    
+                    
+                    @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.Label("Branch Name", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                @Html.Label("Branch Name", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
+                <div class="col-sm-12">
+                    @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ItemQuantity, htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.ItemQuantity, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ItemQuantity, "", new { @class = "text-danger" })
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-sm-12">
+                    @Html.EditorFor(model => model.ItemQuantity, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ItemQuantity, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-2">
-                <a href="Quantities" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-arrow-left"></span> Back to Quantities List
-                </a>
+        <div class="row d-flex justify-content-between">
+            <input type="submit" value="Save" class="btn btn-primary col-9 mx-auto" />
+        </div>
+    </div>
+}
+
+<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+            <div class="row">
+                <div class="col-md-2">
+                    <a href="Quantities" class="btn btn-default btn-block">
+                        <span class="glyphicon glyphicon-arrow-left"></span> Back to Quantities List
+                    </a>
+                </div>
             </div>
             <div class="col-md-offset-3 col-md-2">
                 <button type="submit" value="Save" class="btn btn-default btn-block">
@@ -68,5 +83,3 @@
                 </button>
             </div>
         </div>
-    </div>
-}
