--- a/Views/Quantities/Index.cshtml
+++ b/Views/Quantities/Index.cshtml
@@ -16,22 +16,22 @@
 {
     <div class="row">
         <div class="col-md-2">
-            <div class="form-group">
+            <div class="row">
                 <input type="search" name="ModelNumber" placeholder="Model Number" class="form-control">
             </div>
         </div>
         <div class="col-md-2">
-            <div class="form-group">
+            <div class="row">
                 <input type="search" name="Description" placeholder="Description" class="form-control">
             </div>
         </div>
         <div class="col-md-2">
-            <div class="form-group">
+            <div class="row">
                 @Html.DropDownList("BranchId", null, new { @class = "form-control" })
             </div>
         </div>
         <div class="col-md-2">
-            <div class="form-group">
+            <div class="row">
                 <button type="submit" value="Search" class="btn btn-default btn-block">
                     <span class="glyphicon glyphicon-search"></span> Search
                 </button>
